src/styles/main.scss
@import "./_var.scss";

:root {
  color-scheme: dark;
  --accent-color: $accent; // conversion for theme color meta tag
}

::selection {
  background-color: $accent;
}
::marker {
  color: $accent;
}

body {
  background-color: $primary;
  font-family: "Satoshi-Regular", "Arial";
  font-size: 16px;
  position: relative;
  min-height: 95vh;
}

h1 {
  font-family: "Tanker-Regular", "Arial";
}

main {
  display: flex;
  justify-content: space-evenly;
}

.content {
  display: flex;
  flex-direction: column;
  position: relative;
  align-self: center;
  background-color: $highlight;
  border-radius: 25px;
  border: 1px solid lighten($highlight, 12%);
  box-shadow: 0px 4px 4px 0px #00000040;
  padding: 2vw;
  width: 65vw;

  margin-bottom: 11vh;
}
.second-content {
  align-self: center;
  text-align: center;
  $second-content-clr: #6e6e6e40;
  background-color: $second-content-clr;
  border-radius: 25px;
  border: 1px solid lighten($second-content-clr, 12%);
  min-width: 30vw;
  margin-inline: 10vw;
  p, ul,h1,h2,h3{
    padding-inline: 2vw;
  }
}

td {
  border-inline: 15px solid;
  border-color: #ffffff00;
}

table {
  overflow: scroll;
  display: block;
}

b, strong {
  font-family: "Satoshi-Bold";
  color: $accent;
}
a {
  color: $link;
  &[target="_blank"]::after{
    display: inline-block;
    width: 20px;
    height: 20px;
    vertical-align: -0.125em;
    content: " ";
    $external_svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0  0  24  24'%3E%3Cpath fill='%23000' d='M14  3v2h3.59l-9.83  9.83l1.41  1.41L19  6.41V10h2V3m-2  16H5V5h7V3H5a2  2  0  0  0-2  2v14a2  2  0  0  0  2  2h14a2  2  0  0  0  2-2v-7h-2z'/%3E%3C/svg%3E");
    -webkit-mask: $external_svg no-repeat center;
    mask: $external_svg no-repeat center;
    background-color: $link; // This will color the SVG
  }
}

figure {
  margin: 0;
}

.expressive-code {
  border: 1px solid lighten(#282a36, 10%);
  code {
    background-color: transparent;
  }
  pre {
    background-color: transparent !important;
    border: transparent !important;
    background: none !important;
  }
  .copy {
    button {
      width: 30px !important;
      height: 30px !important;
      margin: 5px !important;
      border-radius: 25px !important;
      display: none;
    }
  }
  &:hover {
    .copy {
      button {
        display: inline;
      }
    }
  }
  & {
    position: relative;
    overflow: scroll;
    display: grid;
    margin: 0;
    max-width: 50vw;
    background-color: #282a36;
    border-radius: 20px;
  }
  .frame.is-terminal .header::before {
    background-color: gray !important;
  }
}

code {
  background-color: #282a36;
  padding-inline: 10px;
  padding-block: 2px;
  border-radius: 15px;
}

h1,
h2,
h3 {
  a {
    color: white;
    text-decoration: none;
  }
}

svg {
  margin-bottom: -2px;
}

img {
  max-width: 100%;
  max-height: 100%;
}

button {
  $button-color: #42b971;
  padding-block: 10px;
  padding-inline: 20px;
  border-radius: 50px;
  font-family: "Satoshi-Bold";
  background-color: $button-color;
  border: 1px solid lighten($button-color, 12%);
  font-size: 18px;
  &:active {
    background-color: darken($button-color, 10);
    transform: translateY(1px);
  }
}

.center {
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

@media (max-width: $responsive-width) {
  .content{
    min-width: 90vw !important;
  }
}

